2007-10-13 [paul]	3.0.2cvs66

	* src/main.c
	* src/main.h
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
		fix a bunch of compiler warnings on maemo

2007-10-12 [colin]	3.0.2cvs65

	* src/account.c
	* src/addritem.c
	* src/addritem.h
	* src/filtering.c
	* src/filtering.h
	* src/folder.c
	* src/folder.h
	* src/common/utils.c
	* src/common/utils.h
		Remove unused code, staticalise some functions

2007-10-12 [paul]	3.0.2cvs64

	* src/account.c
	* src/folderview.c
	* src/main.c
	* src/mainwindow.c
	* src/messageview.c
	* src/summary_search.c
	* src/summaryview.c
	* src/toolbar.c
	* src/wizard.c
	* src/common/utils.c
	* src/gtk/prefswindow.c
		fix a bunch of compiler warnings on maemo

2007-10-11 [colin]	3.0.2cvs63

	* src/editaddress.c
		Make static function static

2007-10-11 [mones]	3.0.2cvs62

	* src/addrduplicates.c
	* src/addressbook.c
	* src/compose.c
	* src/expldifdlg.c
	* src/mainwindow.c
	* src/messageview.c
	* src/pop.c
	* src/prefs_customheader.c
	* src/prefs_send.c
	* src/prefs_themes.c
	* src/common/plugin.c
	* src/gtk/pluginwindow.c
	* src/gtk/quicksearch.c
		Fix several typos and capitalisation issues

2007-10-11 [wwp]	3.0.2cvs61

	* src/editaddress.c
		Fix a warning about possible use of uninitialized
		filename var.

2007-10-11 [wwp]	3.0.2cvs60

	* src/editaddress.c
		Disable "Unset picture" menu item when there's
		no picture to clear. Fix an extraneous g_unref_object,
		add missing initializers.

2007-10-11 [wwp]	3.0.2cvs59

	* src/pixmaps/anonymous.xpm
	* src/editaddress.c
	* src/Makefile.am
	* src/stock_pixmap.c
	* src/stock_pixmap.h
		Fix a leak, gettext-ize the photo label.
		Don't clear the existing picture if loading
		a new one fails. Use a default 'anonymous'
		picture (this new xpm has been added to the
		internal stock_pixmap API). Add a
		"Set picture" context menu entry.

2007-10-11 [colin]	3.0.2cvs58

	* src/messageview.c
		Make shift-shortcuts work
	* src/prefs_actions.c
		Don't ask if we really want to close when