@@ -2979,3 +2979,4 @@
 ( cvs diff -u -r 1.61.2.72 -r 1.61.2.73 src/account.c;  cvs diff -u -r 1.207.2.186 -r 1.207.2.187 src/folderview.c;  cvs diff -u -r 1.115.2.169 -r 1.115.2.170 src/main.c;  cvs diff -u -r 1.274.2.215 -r 1.274.2.216 src/mainwindow.c;  cvs diff -u -r 1.94.2.160 -r 1.94.2.161 src/messageview.c;  cvs diff -u -r 1.15.2.52 -r 1.15.2.53 src/summary_search.c;  cvs diff -u -r 1.395.2.330 -r 1.395.2.331 src/summaryview.c;  cvs diff -u -r 1.43.2.88 -r 1.43.2.89 src/toolbar.c;  cvs diff -u -r 1.1.2.61 -r 1.1.2.62 src/wizard.c;  cvs diff -u -r 1.36.2.117 -r 1.36.2.118 src/common/utils.c;  cvs diff -u -r 1.12.2.43 -r 1.12.2.44 src/gtk/prefswindow.c;  ) > 3.0.2cvs64.patchset
 ( cvs diff -u -r 1.61.2.73 -r 1.61.2.74 src/account.c;  cvs diff -u -r 1.13.2.15 -r 1.13.2.16 src/addritem.c;  cvs diff -u -r 1.12.2.13 -r 1.12.2.14 src/addritem.h;  cvs diff -u -r 1.60.2.38 -r 1.60.2.39 src/filtering.c;  cvs diff -u -r 1.21.2.14 -r 1.21.2.15 src/filtering.h;  cvs diff -u -r 1.213.2.165 -r 1.213.2.166 src/folder.c;  cvs diff -u -r 1.87.2.49 -r 1.87.2.50 src/folder.h;  cvs diff -u -r 1.36.2.118 -r 1.36.2.119 src/common/utils.c;  cvs diff -u -r 1.20.2.52 -r 1.20.2.53 src/common/utils.h;  ) > 3.0.2cvs65.patchset
 ( cvs diff -u -r 1.115.2.170 -r 1.115.2.171 src/main.c;  cvs diff -u -r 1.7.2.12 -r 1.7.2.13 src/main.h;  cvs diff -u -r 1.5.2.67 -r 1.5.2.68 src/gtk/gtkutils.c;  cvs diff -u -r 1.4.2.36 -r 1.4.2.37 src/gtk/gtkutils.h;  ) > 3.0.2cvs66.patchset
+( cvs diff -u -r 1.5.2.24 -r 1.5.2.25 src/gtk/menu.c;  ) > 3.0.2cvs67.patchset
